Check whether there is a quazip file before deleting it

BUG:443559

(Note the file is still broken, but now Krita says what's wrong
with it.)